# xivc-text-sim

./: Cargo.toml  README.md  dncai.txt  out.txt  seq.txt  sim.ycf
action_lists/: brd.txt  dnc.txt  rpr.txt  sam.txt
src/: data.rs  dncai.rs  jobai.rs  main.rs
