[package]
name = "xivc-text-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
ycf = { git = "https://github.com/Yurihaia/ycf" }
rand_pcg = "0.3"
xivc-core = { path = "../xivc/crates/xivc-core", features = ["alloc", "serde"] }
